--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,27 @@
 #para2{
   margin-top: 10px !important;
 }
+.select{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 12px;
+  font-size: 16px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 230px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-radius: 3px;
+  background: #DCDCDC;
+}
+.dropdowns{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  height: 90px;
+  background: #F2F2F2;
+
+}
+.logo{
+  height: 70px !important;
+}
